--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-5.99MB/s(Youtube:不良林), server: 36.139.166.64, port: 24058, type: vmess, uuid: 6861c307-5efd-3b8a-b7fa-248ad8dde74e, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: 36.139.166.64}}
-  - {name: 🇸🇬 新加坡-367.3KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.82MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇸🇬 新加坡-1.09MB/s(Youtube:不良林), server: w11.udpgw.com, port: 443, type: trojan, password: f64e69c0-e7b7-11ec-ab81-1239d0255272, sni: w11.udpgw.com, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-316.6KB/s(Youtube:不良林), server: 213.183.59.206, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
+  - {name: 🇭🇰 香港-1.53MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇨🇳 中国-1.67MB/s(Youtube:不良林), server: 2.game.speed.zz.001.oooooooooo.icu, port: 53945, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-5.27MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.48MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-535.0KB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇬🇧 英国-984.2KB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-714.5KB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇳🇱 荷兰-170.2KB/s(Youtube:不良林), server: 213.183.59.214, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇨🇳 中国-313.4KB/s(Youtube:不良林), server: trojan.linkdns.xyz, port: 40208, type: trojan, password: 379105df-ad74-3c8a-ace3-5832de8f973a, sni: trojan.linkdns.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-433.8KB/s(Youtube:不良林), server: sg.v2yyds.cc, port: 35214, type: trojan, password: 90a0dcfe-f7bc-49ba-a72d-762959a03c9f, sni: sg.v2yyds.cc, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-837.1KB/s(Youtube:不良林), server: sg.v2yyds.cc, port: 35213, type: trojan, password: 90a0dcfe-f7bc-49ba-a72d-762959a03c9f, sni: sg.v2yyds.cc, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-933.2KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林), server: 213.183.53.177, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.99MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-367.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.82MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-316.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-535.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-984.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-714.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-170.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-433.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-837.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-933.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-5.99MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-367.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.82MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-316.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-535.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-984.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-714.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-170.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-433.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-837.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-933.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.99MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-367.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.82MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-316.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-535.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-984.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-714.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-170.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-433.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-837.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-933.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.53MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-5.99MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-367.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.82MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-316.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-535.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-984.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-714.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-170.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-433.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-837.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-933.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.99MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-367.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.82MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-316.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-535.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-984.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-714.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-170.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-433.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-837.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-933.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.99MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-367.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.82MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-316.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-535.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-984.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-714.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-170.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-433.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-837.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-933.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.99MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-367.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.82MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-316.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-535.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-984.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-714.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-170.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-433.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-837.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-933.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
