--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-5.42MB/s(Youtube:不良林), server: 3.2.1.fuckppppp.today, port: 60302, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.73MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-5.93MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-245.6KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.75MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.84MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇯🇵 日本-2.44MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-519.8KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇭🇰 香港-915.3KB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
-  - {name: 🇺🇸 美国-5.78MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
+  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: 38.121.43.71, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇳🇱 荷兰-732.2KB/s(Youtube:不良林), server: 185.246.155.23, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 🇺🇸 美国-1.29MB/s(Youtube:不良林), server: 38.121.43.71, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.12MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇷🇺 俄罗斯联邦-708.8KB/s(Youtube:不良林), server: 213.183.53.208, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
+  - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: 167.88.61.50, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-451.9KB/s(Youtube:不良林), server: 51.81.223.0, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.07MB/s(Youtube:不良林), server: 168.138.208.145, port: 56816, type: vmess, uuid: 86aca19f-d23b-4f08-9677-a061b7282bb9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.52MB/s(Youtube:不良林), server: 169.197.141.187, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-1.78MB/s(Youtube:不良林), server: 169.197.141.187, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-245.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.75MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
-      - 🇩🇪 德国-519.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-915.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-732.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-708.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-451.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-245.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.75MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
-      - 🇩🇪 德国-519.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-915.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-732.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-708.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-451.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-245.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.75MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
-      - 🇩🇪 德国-519.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-915.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-732.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-708.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-451.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-915.3KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-245.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.75MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
-      - 🇩🇪 德国-519.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-915.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-732.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-708.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-451.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-245.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.75MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
-      - 🇩🇪 德国-519.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-915.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-732.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-708.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-451.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-245.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.75MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
-      - 🇩🇪 德国-519.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-915.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-732.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-708.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-451.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-245.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.75MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
-      - 🇩🇪 德国-519.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-915.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-732.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-708.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-451.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
