--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: 38.121.43.71, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇳🇱 荷兰-732.2KB/s(Youtube:不良林), server: 185.246.155.23, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 🇺🇸 美国-1.29MB/s(Youtube:不良林), server: 38.121.43.71, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.12MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇷🇺 俄罗斯联邦-708.8KB/s(Youtube:不良林), server: 213.183.53.208, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
+  - {name: 🇺🇸 美国-696.7KB/s(Youtube:不良林), server: 38.121.43.71, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林), server: 185.167.116.38, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
+  - {name: 🇨🇳 中国-645.3KB/s(Youtube:不良林), server: gz-cm1-kl.hinetwork.tw, port: 11112, type: trojan, password: d46abf38-3a4c-3dfc-91e0-d8d3f1616c73, sni: gz-cm1-kl.hinetwork.tw, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林), server: 185.167.116.24, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇺🇸 美国-2.49MB/s(Youtube:不良林), server: 167.88.61.50, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: 167.88.61.50, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-451.9KB/s(Youtube:不良林), server: 51.81.223.0, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.07MB/s(Youtube:不良林), server: 168.138.208.145, port: 56816, type: vmess, uuid: 86aca19f-d23b-4f08-9677-a061b7282bb9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.30MB/s(Youtube:不良林), server: 168.138.208.145, port: 56816, type: vmess, uuid: 86aca19f-d23b-4f08-9677-a061b7282bb9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.52MB/s(Youtube:不良林), server: 169.197.141.187, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-1.78MB/s(Youtube:不良林), server: 169.197.141.187, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-732.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-708.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-696.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-645.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-451.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-732.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-708.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-696.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-645.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-451.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-732.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-708.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-696.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-645.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-451.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-732.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-708.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-696.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-645.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-451.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-732.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-708.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-696.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-645.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-451.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-732.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-708.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-696.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-645.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-451.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-732.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-708.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-696.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-645.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-451.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
 rules:
